--- a/index.html
+++ b/index.html
@@ -174,6 +174,24 @@
         </div>
     </div>
 
+    <div class="section">
+        <h2 class="section-title">Module 1.4</h2>
+        <div class="experiment-list">
+            <a href="Exp1_41.html" class="experiment-card">
+                <span class="experiment-number">Experiment 1.4.1</span>
+                <span class="experiment-file">Exp1_41.html</span>
+            </a>
+            <a href="Exp1_42.html" class="experiment-card">
+                <span class="experiment-number">Experiment 1.4.2</span>
+                <span class="experiment-file">Exp1_42.html</span>
+            </a>
+            <a href="Exp1_43.html" class="experiment-card">
+                <span class="experiment-number">Experiment 1.4.3</span>
+                <span class="experiment-file">Exp1_43.html</span>
+            </a>
+        </div>
+    </div>
+
     <footer>
         &copy; 2026 Full Stack Project | Developed by Srijita Das
     </footer>
